--- a/Sources/GeoMagSwift/Resources/ko.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/ko.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "자기장 해";
+"magnetic_field_solution_main_field" = "주자기장";
+"magnetic_field_solution_secular_variation" = "장기변화";
+"magnetic_field_solution_north" = "북";
+"magnetic_field_solution_east" = "동";
+"magnetic_field_solution_down" = "아래";
+"magnetic_field_solution_horizontal_intensity" = "수평강도";
+"magnetic_field_solution_total_intensity" = "총강도";
+"magnetic_field_solution_declination" = "편각";
+"magnetic_field_solution_inclination" = "경사각";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/년";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "호분/년";
