--- a/Sources/GeoMagSwift/Resources/ar.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/ar.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
-"magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_title" = "حل المجال المغناطيسي";
+"magnetic_field_solution_main_field" = "المجال الرئيسي";
+"magnetic_field_solution_secular_variation" = "التباين العَصري";
+"magnetic_field_solution_north" = "شمال";
+"magnetic_field_solution_east" = "شرق";
+"magnetic_field_solution_down" = "ลง";
+"magnetic_field_solution_horizontal_intensity" = "الشدة الأفقية";
+"magnetic_field_solution_total_intensity" = "الشدة الكلية";
+"magnetic_field_solution_declination" = "الانحراف";
+"magnetic_field_solution_inclination" = "الانحدار";
+"magnetic_field_solution_unit_nt" = "نТ";
+"magnetic_field_solution_unit_nt_per_year" = "نТ/سنة";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "دقائق قوس/سنة";
