--- a/Sources/GeoMagSwift/Resources/hi.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/hi.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "चुंबकीय क्षेत्र समाधान";
+"magnetic_field_solution_main_field" = "मुख्य क्षेत्र";
+"magnetic_field_solution_secular_variation" = "धर्मनिरपेक्ष भिन्नता";
+"magnetic_field_solution_north" = "उत्तर";
+"magnetic_field_solution_east" = "पूर्व";
+"magnetic_field_solution_down" = "नीचे";
+"magnetic_field_solution_horizontal_intensity" = "क्षैतिज तीव्रता";
+"magnetic_field_solution_total_intensity" = "कुल तीव्रता";
+"magnetic_field_solution_declination" = "ग्रहण";
+"magnetic_field_solution_inclination" = "झुकाव";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/वर्ष";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "चाप मिनट/वर्ष";
