--- a/Sources/GeoMagSwift/Resources/nl.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/nl.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Magnetisch veldoplossing";
+"magnetic_field_solution_main_field" = "Hoofdveld";
+"magnetic_field_solution_secular_variation" = "Seculiere variatie";
+"magnetic_field_solution_north" = "Noord";
+"magnetic_field_solution_east" = "Oost";
+"magnetic_field_solution_down" = "Naar beneden";
+"magnetic_field_solution_horizontal_intensity" = "Horizontale intensiteit";
+"magnetic_field_solution_total_intensity" = "Totale intensiteit";
+"magnetic_field_solution_declination" = "Declinatie";
+"magnetic_field_solution_inclination" = "Inclinaties";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/jaar";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "boogminuten/jaar";
