--- a/Sources/GeoMagSwift/Resources/pt.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/pt.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Solução do campo magnético";
+"magnetic_field_solution_main_field" = "Campo principal";
+"magnetic_field_solution_secular_variation" = "Variação secular";
+"magnetic_field_solution_north" = "Norte";
+"magnetic_field_solution_east" = "Leste";
+"magnetic_field_solution_down" = "Para baixo";
+"magnetic_field_solution_horizontal_intensity" = "Intensidade horizontal";
+"magnetic_field_solution_total_intensity" = "Intensidade total";
+"magnetic_field_solution_declination" = "Declinação";
+"magnetic_field_solution_inclination" = "Inclinação";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/ano";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "minutos de arco/ano";
