--- a/Sources/GeoMagSwift/Resources/ru.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/ru.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
-"magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_title" = "Решение магнитного поля";
+"magnetic_field_solution_main_field" = "Основное поле";
+"magnetic_field_solution_secular_variation" = "Секулярное изменение";
+"magnetic_field_solution_north" = "Север";
+"magnetic_field_solution_east" = "Восток";
+"magnetic_field_solution_down" = "Вниз";
+"magnetic_field_solution_horizontal_intensity" = "Горизонтальная интенсивность";
+"magnetic_field_solution_total_intensity" = "Полная интенсивность";
+"magnetic_field_solution_declination" = "Деклинация";
+"magnetic_field_solution_inclination" = "Инклинация";
+"magnetic_field_solution_unit_nt" = "нТ";
+"magnetic_field_solution_unit_nt_per_year" = "нТ/год";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "дуговые минуты/год";
