--- a/Sources/GeoMagSwift/Resources/af.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/af.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Magnetiese Veldoplossing";
+"magnetic_field_solution_main_field" = "Hoofveld";
+"magnetic_field_solution_secular_variation" = "Sekulêre Variasie";
+"magnetic_field_solution_north" = "Noord";
+"magnetic_field_solution_east" = "Oos";
+"magnetic_field_solution_down" = "Af";
+"magnetic_field_solution_horizontal_intensity" = "Horisontale Intensiteit";
+"magnetic_field_solution_total_intensity" = "Totale Intensiteit";
+"magnetic_field_solution_declination" = "Deklinasie";
+"magnetic_field_solution_inclination" = "Inklinasie";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/jaar";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "boogminute/jaar";
