--- a/Sources/GeoMagSwift/Resources/sw.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/sw.lproj/Localizable.strings
@@ -1,13 +1,13 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Mfumo wa Jenereta";
+"magnetic_field_solution_main_field" = "Uchaguzi Mkuu";
+"magnetic_field_solution_secular_variation" = "Mabadiliko ya Kiafrika";
+"magnetic_field_solution_north" = "Kaskazini";
+"magnetic_field_solution_east" = "Mashariki";
+"magnetic_field_solution_down" = "Chini";
+"magnetic_field_solution_horizontal_intensity" = "Intensiti ya Horizontal";
+"magnetic_field_solution_total_intensity" = "Intensiti ya Jumla";
+"magnetic_field_solution_declination" = "Declinasyon";
+"magnetic_field_solution_inclination" = "Inklinasyon";
 "magnetic_field_solution_unit_nt" = "nT";
 "magnetic_field_solution_unit_nt_per_year" = "nT/year";
 "magnetic_field_solution_unit_degree" = "°";
