--- a/Sources/GeoMagSwift/Resources/tr.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/tr.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Manyetik Alan Çözümü";
+"magnetic_field_solution_main_field" = "Ana Alan";
+"magnetic_field_solution_secular_variation" = "Seküler Varyasyon";
+"magnetic_field_solution_north" = "Kuzey";
+"magnetic_field_solution_east" = "Doğu";
+"magnetic_field_solution_down" = "Aşağı";
+"magnetic_field_solution_horizontal_intensity" = "Yatay Yoğunluk";
+"magnetic_field_solution_total_intensity" = "Toplam Yoğunluk";
+"magnetic_field_solution_declination" = "Deklinasyon";
+"magnetic_field_solution_inclination" = "İnklinasyon";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/yıl";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "yay dakikası/yıl";
