--- a/Sources/GeoMagSwift/Resources/bg.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/bg.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
-"magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_title" = "Решение на Магнитно Поле";
+"magnetic_field_solution_main_field" = "Основно Поле";
+"magnetic_field_solution_secular_variation" = "Секуларно Варιαция";
+"magnetic_field_solution_north" = "Север";
+"magnetic_field_solution_east" = "Изток";
+"magnetic_field_solution_down" = "Надолу";
+"magnetic_field_solution_horizontal_intensity" = "Хоризонтален Интензитет";
+"magnetic_field_solution_total_intensity" = "Общ Интензитет";
+"magnetic_field_solution_declination" = "Деклинация";
+"magnetic_field_solution_inclination" = "Инклинация";
+"magnetic_field_solution_unit_nt" = "нТ";
+"magnetic_field_solution_unit_nt_per_year" = "нТ/година";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "арч минути/година";
