--- a/Sources/GeoMagSwift/Resources/bs.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/bs.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Rješenje Magnetskog Polja";
+"magnetic_field_solution_main_field" = "Glavno Polje";
+"magnetic_field_solution_secular_variation" = "Sekularna Varijacija";
+"magnetic_field_solution_north" = "Sever";
+"magnetic_field_solution_east" = "Istok";
+"magnetic_field_solution_down" = "Dolje";
+"magnetic_field_solution_horizontal_intensity" = "Horizontalna Intenzitet";
+"magnetic_field_solution_total_intensity" = "Ukupna Intenzitet";
+"magnetic_field_solution_declination" = "Deklinacija";
+"magnetic_field_solution_inclination" = "Inklinacija";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/godina";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "krivuljne minute/godina";
