--- a/Sources/GeoMagSwift/Resources/et.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/et.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Magneetvälja Lahendus";
+"magnetic_field_solution_main_field" = "Peamisvälja";
+"magnetic_field_solution_secular_variation" = "Sekulaarne Variatsioon";
+"magnetic_field_solution_north" = "Põhi";
+"magnetic_field_solution_east" = "Ida";
+"magnetic_field_solution_down" = "Alla";
+"magnetic_field_solution_horizontal_intensity" = "Horisontaalne Intentsiivsus";
+"magnetic_field_solution_total_intensity" = "Kokku Intentsiivsus";
+"magnetic_field_solution_declination" = "Deklinatsioon";
+"magnetic_field_solution_inclination" = "Inklinatsioon";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/aasta";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "kaareminutid/aasta";
