--- a/Sources/GeoMagSwift/Resources/gu.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/gu.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "ચુંબકીય ક્ષેત્રનું ઉકેલ";
+"magnetic_field_solution_main_field" = "મુખ્ય ક્ષેત્ર";
+"magnetic_field_solution_secular_variation" = "धर्मनिरपेक्ष વિવિધતા";
+"magnetic_field_solution_north" = "ઉત્તર";
+"magnetic_field_solution_east" = "પૂર્વ";
+"magnetic_field_solution_down" = "નીચે";
+"magnetic_field_solution_horizontal_intensity" = "ક્ષેતિજ તીવ્રતા";
+"magnetic_field_solution_total_intensity" = "કુલ તીવ્રતા";
+"magnetic_field_solution_declination" = "અભિવ્યક્તિ";
+"magnetic_field_solution_inclination" = "નમન";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/વર્ષ";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "કોણ મિનિટ/વર્ષ";
