--- a/Sources/GeoMagSwift/Resources/ml.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/ml.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "മാഗ്നെറ്റിക് ഫീൽഡ് പരിഹാരം";
+"magnetic_field_solution_main_field" = "പ്രധാന മണ്ഡലം";
+"magnetic_field_solution_secular_variation" = "ധര്മനिरপेक്ഷ വ്യതിയാനം";
+"magnetic_field_solution_north" = "വടക്ക്";
+"magnetic_field_solution_east" = "കിഴക്ക്";
+"magnetic_field_solution_down" = "താഴത്ത്";
+"magnetic_field_solution_horizontal_intensity" = "കിരണീയ തീവ്രത";
+"magnetic_field_solution_total_intensity" = "ആകെ തീവ്രത";
+"magnetic_field_solution_declination" = "വിഭജനം";
+"magnetic_field_solution_inclination" = "ചാട്ട";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/വർഷം";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/വർഷം";
