--- a/Sources/GeoMagSwift/Resources/mt.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/mt.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Soluzzjoni ta' Kamp Manjetiku";
+"magnetic_field_solution_main_field" = "Kamp prinċipali";
+"magnetic_field_solution_secular_variation" = "Varjazzjoni sekkulari";
+"magnetic_field_solution_north" = "Tramuntana";
+"magnetic_field_solution_east" = "L-est";
+"magnetic_field_solution_down" = "Isfel";
+"magnetic_field_solution_horizontal_intensity" = "Intensità orizzontali";
+"magnetic_field_solution_total_intensity" = "Intensità totali";
+"magnetic_field_solution_declination" = "Deklinazzjoni";
+"magnetic_field_solution_inclination" = "Inklinazzjoni";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/sena";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/sena";
