--- a/Sources/GeoMagSwift/Resources/as.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/as.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "চৌম্বক ক্ষেত্র সমাধান";
+"magnetic_field_solution_main_field" = "মূল ক্ষেত্র";
+"magnetic_field_solution_secular_variation" = "ধর্মনিরপেক্ষ বৈচিত্র";
+"magnetic_field_solution_north" = "উত্তর";
+"magnetic_field_solution_east" = "পূর্ব";
+"magnetic_field_solution_down" = "নীচে";
+"magnetic_field_solution_horizontal_intensity" = "অনুভূমিক তীব্রতা";
+"magnetic_field_solution_total_intensity" = "মোট তীব্রতা";
+"magnetic_field_solution_declination" = "প্রত্যয়";
+"magnetic_field_solution_inclination" = "ঝোঁক";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/বছর";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "কোণ মিনিট/বছর";
