--- a/Sources/GeoMagSwift/Resources/az.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/az.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Maqnit Sahəsinin Çözümü";
+"magnetic_field_solution_main_field" = "Əsas Sahə";
+"magnetic_field_solution_secular_variation" = "Dövri Dəyişiklik";
+"magnetic_field_solution_north" = "Şimal";
+"magnetic_field_solution_east" = "Şərq";
+"magnetic_field_solution_down" = "Aşağı";
+"magnetic_field_solution_horizontal_intensity" = "Üfüqi İntensitet";
+"magnetic_field_solution_total_intensity" = "Ümumi İntensitet";
+"magnetic_field_solution_declination" = "Deklinasiya";
+"magnetic_field_solution_inclination" = "İnklinasiya";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/il";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "qütb dəqiqəsi/il";
