--- a/Sources/GeoMagSwift/Resources/be.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/be.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
-"magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_title" = "Развязак магнітнага поля";
+"magnetic_field_solution_main_field" = "Асноўнае поле";
+"magnetic_field_solution_secular_variation" = "Сэкулярнае зменянне";
+"magnetic_field_solution_north" = "Паўноч";
+"magnetic_field_solution_east" = "Усход";
+"magnetic_field_solution_down" = "Ніз";
+"magnetic_field_solution_horizontal_intensity" = "Гарызантальная інтэнсіўнасць";
+"magnetic_field_solution_total_intensity" = "Агульная інтэнсіўнасць";
+"magnetic_field_solution_declination" = "Дэклінацыя";
+"magnetic_field_solution_inclination" = "Інклінацыя";
+"magnetic_field_solution_unit_nt" = "нТ";
+"magnetic_field_solution_unit_nt_per_year" = "нТ/год";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "дугавыя хвіліны/год";
