--- a/Sources/GeoMagSwift/Resources/cy.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/cy.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Datrys Cylchwedd Magnetig";
+"magnetic_field_solution_main_field" = "Prif Gylchwedd";
+"magnetic_field_solution_secular_variation" = "Newid Secwlar";
+"magnetic_field_solution_north" = "Gogledd";
+"magnetic_field_solution_east" = "Dwyrain";
+"magnetic_field_solution_down" = "I lawr";
+"magnetic_field_solution_horizontal_intensity" = "Cwmpasedd llorweddol";
+"magnetic_field_solution_total_intensity" = "Cwmpasedd cyfan";
+"magnetic_field_solution_declination" = "Gwahaniaeth";
+"magnetic_field_solution_inclination" = "Gwagediad";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/blwyddyn";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "munud arc/blwyddyn";
