--- a/Sources/GeoMagSwift/Resources/el.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/el.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Λύση Μαγνητικού Πεδίου";
+"magnetic_field_solution_main_field" = "Κύριο Πεδίο";
+"magnetic_field_solution_secular_variation" = "Σημαία Μεταβολή";
+"magnetic_field_solution_north" = "Βόρεια";
+"magnetic_field_solution_east" = "Ανατολική";
+"magnetic_field_solution_down" = "Κάτω";
+"magnetic_field_solution_horizontal_intensity" = "Οριζόντια Ισχύς";
+"magnetic_field_solution_total_intensity" = "Συνολική Ισχύς";
+"magnetic_field_solution_declination" = "Ηλίκωσις";
+"magnetic_field_solution_inclination" = "Κλίση";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/χρόνος";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "αρχή λεπτών/χρόνος";
