--- a/Sources/GeoMagSwift/Resources/fi.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/fi.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Magneettikentän Ratkaisu";
+"magnetic_field_solution_main_field" = "Pääkenttä";
+"magnetic_field_solution_secular_variation" = "Sekulaarinen Muutos";
+"magnetic_field_solution_north" = "Pohjoinen";
+"magnetic_field_solution_east" = "Itä";
+"magnetic_field_solution_down" = "Alas";
+"magnetic_field_solution_horizontal_intensity" = "Vaakasuuntainen Voima";
+"magnetic_field_solution_total_intensity" = "Yhteensä Voima";
+"magnetic_field_solution_declination" = "Deklinaatio";
+"magnetic_field_solution_inclination" = "Inklinaatio";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/vuosi";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "kaari minuutit/vuosi";
