--- a/Sources/GeoMagSwift/Resources/ga.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/ga.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Réiteach Réimse Mhaighnéadach";
+"magnetic_field_solution_main_field" = "Pridomh Réimse";
+"magnetic_field_solution_secular_variation" = "Athrú Seicilteach";
+"magnetic_field_solution_north" = "Tuaisceart";
+"magnetic_field_solution_east" = "Oirthear";
+"magnetic_field_solution_down" = "Síos";
+"magnetic_field_solution_horizontal_intensity" = "Dianracht cothrománach";
+"magnetic_field_solution_total_intensity" = "Dianracht iomlán";
+"magnetic_field_solution_declination" = "Dealclaíocht";
+"magnetic_field_solution_inclination" = "Inclíocht";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/bliain";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "nóiméad arc/bliain";
