--- a/Sources/GeoMagSwift/Resources/hu.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/hu.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Mágneses Terület Megoldás";
+"magnetic_field_solution_main_field" = "Fő Terület";
+"magnetic_field_solution_secular_variation" = "Szekuláris Változás";
+"magnetic_field_solution_north" = "Észak";
+"magnetic_field_solution_east" = "Kelet";
+"magnetic_field_solution_down" = "Le";
+"magnetic_field_solution_horizontal_intensity" = "Vízszintes Intenzitás";
+"magnetic_field_solution_total_intensity" = "Teljes Intenzitás";
+"magnetic_field_solution_declination" = "Deklináció";
+"magnetic_field_solution_inclination" = "Inklináció";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/év";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "körív perc/év";
