--- a/Sources/GeoMagSwift/Resources/hy.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/hy.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Մագնիսական Տիրույթի Վարմանջատում";
+"magnetic_field_solution_main_field" = "Գլխային Տիրույթ";
+"magnetic_field_solution_secular_variation" = "Բնական Վարժություն";
+"magnetic_field_solution_north" = "Հյուսիս";
+"magnetic_field_solution_east" = "Արևելք";
+"magnetic_field_solution_down" = "Ներքև";
+"magnetic_field_solution_horizontal_intensity" = "Հորիզոնական Մատչելություն";
+"magnetic_field_solution_total_intensity" = "Ընդհանուր Մատչելություն";
+"magnetic_field_solution_declination" = "Դեկլինացիա";
+"magnetic_field_solution_inclination" = "Ինկլինացիա";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/տարի";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "կուրճ minute/տարի";
