--- a/Sources/GeoMagSwift/Resources/kn.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/kn.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "ಮ್ಯাগ್ನೆಟಿಕ್ ಫೀಲ್ಡ್ ಪರಿಹಾರ";
+"magnetic_field_solution_main_field" = "ಮುಖ್ಯ ಕ್ಷೇತ್ರ";
+"magnetic_field_solution_secular_variation" = "ಧರ್ಮನिरপেক್ಷ ಬದಲಾವಣೆ";
+"magnetic_field_solution_north" = "ಉತ್ತರ";
+"magnetic_field_solution_east" = "ಪೂರ್ವ";
+"magnetic_field_solution_down" = "ಕೆಳಗೆ";
+"magnetic_field_solution_horizontal_intensity" = "ಆಕ්ෂிய ಆತ интенಸಿಟಿ";
+"magnetic_field_solution_total_intensity" = "ಕုਲ ಆತ интенಸಿಟಿ";
+"magnetic_field_solution_declination" = "ವಿಭಜನ";
+"magnetic_field_solution_inclination" = "ಆక罗庚";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/ವಾರ್ಷಕ";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "ಕೋನ ಮિનುಟ್/ವಾರ್ಷಕ";
