--- a/Sources/GeoMagSwift/Resources/lv.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/lv.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Magnētiskā Lauka Risinājums";
+"magnetic_field_solution_main_field" = "Galvenais Lauks";
+"magnetic_field_solution_secular_variation" = "Sekulāra Variācija";
+"magnetic_field_solution_north" = "Ziemeļi";
+"magnetic_field_solution_east" = "Austrumi";
+"magnetic_field_solution_down" = "Lejup";
+"magnetic_field_solution_horizontal_intensity" = "Horizontālā Intensitāte";
+"magnetic_field_solution_total_intensity" = "Kopējā Intensitāte";
+"magnetic_field_solution_declination" = "Deklinācija";
+"magnetic_field_solution_inclination" = "Inklinācija";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/gads";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "līknes minūtes/gads";
