--- a/Sources/GeoMagSwift/Resources/ms.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/ms.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Penyelesaian Medan Magnet";
+"magnetic_field_solution_main_field" = "Medan Utama";
+"magnetic_field_solution_secular_variation" = "Variasi Sekular";
+"magnetic_field_solution_north" = "Utara";
+"magnetic_field_solution_east" = "Timur";
+"magnetic_field_solution_down" = "Ke bawah";
+"magnetic_field_solution_horizontal_intensity" = "Keamatan Mendatar";
+"magnetic_field_solution_total_intensity" = "Keamatan Jumlah";
+"magnetic_field_solution_declination" = "Deklinasi";
+"magnetic_field_solution_inclination" = "Kecenderungan";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/tahun";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/tahun";
