--- a/Sources/GeoMagSwift/Resources/pl.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/pl.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Rozwiązanie Pola Magnetycznego";
+"magnetic_field_solution_main_field" = "Główne Pole";
+"magnetic_field_solution_secular_variation" = "Wariacja Sekularna";
+"magnetic_field_solution_north" = "Północ";
+"magnetic_field_solution_east" = "Wschód";
+"magnetic_field_solution_down" = "W dół";
+"magnetic_field_solution_horizontal_intensity" = "Intensywność Horyzontalna";
+"magnetic_field_solution_total_intensity" = "Intensywność Całkowita";
+"magnetic_field_solution_declination" = "Deklinacja";
+"magnetic_field_solution_inclination" = "Inklinacja";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/rok";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "minuty łukowe/rok";
