--- a/Sources/GeoMagSwift/Resources/ro.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/ro.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Soluție de Câmp Magnetic";
+"magnetic_field_solution_main_field" = "Câmp Principal";
+"magnetic_field_solution_secular_variation" = "Variație Seculară";
+"magnetic_field_solution_north" = "Nord";
+"magnetic_field_solution_east" = "Est";
+"magnetic_field_solution_down" = "Jos";
+"magnetic_field_solution_horizontal_intensity" = "Intensitate Orizontală";
+"magnetic_field_solution_total_intensity" = "Intensitate Totală";
+"magnetic_field_solution_declination" = "Declinație";
+"magnetic_field_solution_inclination" = "Inclinație";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/an";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "minute arc/an";
