--- a/Sources/GeoMagSwift/Resources/sk.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/sk.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Riešenie Magnetického Pola";
+"magnetic_field_solution_main_field" = "Hlavné Pole";
+"magnetic_field_solution_secular_variation" = "Sekulárna Variácia";
+"magnetic_field_solution_north" = "Sever";
+"magnetic_field_solution_east" = "Východ";
+"magnetic_field_solution_down" = "Dole";
+"magnetic_field_solution_horizontal_intensity" = "Horizontálna Intenzita";
+"magnetic_field_solution_total_intensity" = "Celková Intenzita";
+"magnetic_field_solution_declination" = "Deklinácia";
+"magnetic_field_solution_inclination" = "Inklinácia";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/rok";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "lukové minúty/rok";
