--- a/Sources/GeoMagSwift/Resources/sq.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/sq.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Zgjidhja e Fusit Magnetik";
+"magnetic_field_solution_main_field" = "Fusha Kryesore";
+"magnetic_field_solution_secular_variation" = "Variacioni Sekular";
+"magnetic_field_solution_north" = "Veriu";
+"magnetic_field_solution_east" = "Lindja";
+"magnetic_field_solution_down" = "Poshtë";
+"magnetic_field_solution_horizontal_intensity" = "Intensiteti Horizontal";
+"magnetic_field_solution_total_intensity" = "Intensiteti Total";
+"magnetic_field_solution_declination" = "Deklinacioni";
+"magnetic_field_solution_inclination" = "Inklinacioni";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/vit";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "minuta qarku/vit";
