--- a/Sources/GeoMagSwift/Resources/sr.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/sr.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
-"magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_title" = "Решение Магнетногa Пола";
+"magnetic_field_solution_main_field" = "Главно Поле";
+"magnetic_field_solution_secular_variation" = "Секуларна Варјација";
+"magnetic_field_solution_north" = "Север";
+"magnetic_field_solution_east" = "Исток";
+"magnetic_field_solution_down" = "Долу";
+"magnetic_field_solution_horizontal_intensity" = "Хоризонтална Интензитет";
+"magnetic_field_solution_total_intensity" = "Укупна Интензитет";
+"magnetic_field_solution_declination" = "Деклинација";
+"magnetic_field_solution_inclination" = "Инклинација";
+"magnetic_field_solution_unit_nt" = "нТ";
+"magnetic_field_solution_unit_nt_per_year" = "нТ/година";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "луковне минуте/година";
