--- a/Sources/GeoMagSwift/Resources/te.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/te.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "మాగ్నెటిక్ ఫీల్డ్ సాలూషన";
+"magnetic_field_solution_main_field" = "ప్రధాన ఫీల్డ్";
+"magnetic_field_solution_secular_variation" = "సెక్యులర్ వేరియేషన్";
+"magnetic_field_solution_north" = "ఉత్తర";
+"magnetic_field_solution_east" = "తూర్పు";
+"magnetic_field_solution_down" = "కింద";
+"magnetic_field_solution_horizontal_intensity" = "అడ్డدار సామర్థ్యం";
+"magnetic_field_solution_total_intensity" = "మొత్తం సామర్థ్యం";
+"magnetic_field_solution_declination" = "విభజన";
+"magnetic_field_solution_inclination" = "झुकाव";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/సంవత్సరం";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/సంవత్సరం";
