--- a/Sources/GeoMagSwift/Resources/ta.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/ta.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "காந்தப் புலத்தின் தீர்வு";
+"magnetic_field_solution_main_field" = "முதன்மையான புலம்";
+"magnetic_field_solution_secular_variation" = "மதச்சாரற்ற மாறுபாடு";
+"magnetic_field_solution_north" = "வடக்கு";
+"magnetic_field_solution_east" = "கிழக்கு";
+"magnetic_field_solution_down" = "கீழே";
+"magnetic_field_solution_horizontal_intensity" = "கிடைமட்ட தீவிரம்";
+"magnetic_field_solution_total_intensity" = "மொத்த தீவிரம்";
+"magnetic_field_solution_declination" = "பிரிவு";
+"magnetic_field_solution_inclination" = "झुकाव";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/ஆண்டு";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/ஆண்டு";
