--- a/Sources/GeoMagSwift/Resources/tk.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/tk.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Maqnit alanynyň çözilmesi";
+"magnetic_field_solution_main_field" = "Esasy alan";
+"magnetic_field_solution_secular_variation" = "Dövrümiýe üýtgeýji";
+"magnetic_field_solution_north" = "Şimali";
+"magnetic_field_solution_east" = "Şarky";
+"magnetic_field_solution_down" = "Aşagy";
+"magnetic_field_solution_horizontal_intensity" = "Gorizontal intensiviýeti";
+"magnetic_field_solution_total_intensity" = "Jemi intensiviýeti";
+"magnetic_field_solution_declination" = "Deklinasiýa";
+"magnetic_field_solution_inclination" = "Inklinasiýa";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/ýyl";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/ýyl";
