--- a/Sources/GeoMagSwift/Resources/uz.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/uz.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Magnit maydon yechimi";
+"magnetic_field_solution_main_field" = "Asosiy maydon";
+"magnetic_field_solution_secular_variation" = "Sekulyar o'zgaruvchanlik";
+"magnetic_field_solution_north" = "Shimol";
+"magnetic_field_solution_east" = "Sharq";
+"magnetic_field_solution_down" = "Pastga";
+"magnetic_field_solution_horizontal_intensity" = "Gorizontal intensivlik";
+"magnetic_field_solution_total_intensity" = "Jami intensivlik";
+"magnetic_field_solution_declination" = "Deklinatsiya";
+"magnetic_field_solution_inclination" = "Inklinatsiya";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/yil";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/yil";
