--- a/Sources/GeoMagSwift/Resources/vi.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/vi.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "Giải pháp Trường từ";
+"magnetic_field_solution_main_field" = "Trường chính";
+"magnetic_field_solution_secular_variation" = "Biến thiên thế kỷ";
+"magnetic_field_solution_north" = "Bắc";
+"magnetic_field_solution_east" = "Đông";
+"magnetic_field_solution_down" = "Xuống";
+"magnetic_field_solution_horizontal_intensity" = "Cường độ ngang";
+"magnetic_field_solution_total_intensity" = "Cường độ tổng";
+"magnetic_field_solution_declination" = "Độ lệch";
+"magnetic_field_solution_inclination" = "Độ nghiêng";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/năm";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/năm";
