--- a/Sources/GeoMagSwift/Resources/zh-Hans-CN.lproj/Localizable.strings
+++ b/Sources/GeoMagSwift/Resources/zh-Hans-CN.lproj/Localizable.strings
@@ -1,14 +1,14 @@
-"magnetic_field_solution_title" = "Magnetic Field Solution";
-"magnetic_field_solution_main_field" = "Main Field";
-"magnetic_field_solution_secular_variation" = "Secular Variation";
-"magnetic_field_solution_north" = "North";
-"magnetic_field_solution_east" = "East";
-"magnetic_field_solution_down" = "Down";
-"magnetic_field_solution_horizontal_intensity" = "Horizontal Intensity";
-"magnetic_field_solution_total_intensity" = "Total Intensity";
-"magnetic_field_solution_declination" = "Declination";
-"magnetic_field_solution_inclination" = "Inclination";
+"magnetic_field_solution_title" = "磁场计算结果";
+"magnetic_field_solution_main_field" = "主磁场";
+"magnetic_field_solution_secular_variation" = "长期变化";
+"magnetic_field_solution_north" = "北向分量";
+"magnetic_field_solution_east" = "东向分量";
+"magnetic_field_solution_down" = "向下分量";
+"magnetic_field_solution_horizontal_intensity" = "水平强度";
+"magnetic_field_solution_total_intensity" = "总强度";
+"magnetic_field_solution_declination" = "磁偏角";
+"magnetic_field_solution_inclination" = "磁倾角";
 "magnetic_field_solution_unit_nt" = "nT";
-"magnetic_field_solution_unit_nt_per_year" = "nT/year";
+"magnetic_field_solution_unit_nt_per_year" = "nT/年";
 "magnetic_field_solution_unit_degree" = "°";
-"magnetic_field_solution_unit_arcmin_per_year" = "arcmin/year";
+"magnetic_field_solution_unit_arcmin_per_year" = "角分/年";
